--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,18 @@ spring:
   application:
     name: setbuilder
   datasource:
-      url: ${DATASOURCE_URL}
-      username: ${JDBC_USERNAME}
-      password: ${JDBC_PASSWORD}
-      driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://127.0.0.1:5432/${DB_NAME}
+    username: ${JDBC_USERNAME}
+    password: ${JDBC_PASSWORD}
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
-        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
   sql:
     init:
       mode: always
